--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(bluey bluey.cpp)
+add_executable(bluey bluey.cpp ../src/Item.cpp ../src/Item.hpp)
 target_compile_features(bluey PRIVATE cxx_std_20)
