--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@
 *.app
 
 # Cmake
+.cache/
 build/
 Testing/
 CMakeSettings.json
@@ -43,3 +44,6 @@ compile_commands.json
 cmake-build/
 cmake-build-debug/
 .idea/
+
+#VSCode
+.vscode/
