--- a/.github/workflows/PR-main.yml
+++ b/.github/workflows/PR-main.yml
@@ -28,14 +28,11 @@ jobs:
       run: |
           sudo apt install -y --no-install-recommends \
             git \
-            cmake \
-            clang-format
+            cmake
     - name: Merge fork with upstream locally
       run: |
           git config pull.rebase true
-          git clone --branch ${{ env.TARGET_BRANCH_NAME }} https://github.com/NextPP/sudoManager.git
           git pull -v "https://github.com/${{ env.PR_AUTHOR_FORK }}" "${{ env.SOURCE_BRANCH_NAME }}"
-
     - name : Configure
       run: cmake -DBUILD_TESTING=ON -S . -B build
     - name : Build
@@ -44,3 +41,39 @@ jobs:
       run: |
           cd build
           ctest
+  Check_Code_Format:
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v2
+    - name: Install dependency packages
+      run: |
+          sudo apt install -y --no-install-recommends \
+            git \
+            cmake \
+            clang-format
+    - name: Merge fork with upstream locally
+      run: |
+          git config pull.rebase true
+          git pull -v "https://github.com/${{ env.PR_AUTHOR_FORK }}" "${{ env.SOURCE_BRANCH_NAME }}"
+    - name: Run check
+      run: | 
+          find . -regex '.*\.\(cpp\|hpp\|cxx\|cp\|cc\|cu\|c\|h\)' -not -path '*/extern/*' -exec clang-format -style=file -i {} \;
+          git diff --exit-code
+  Check_Cmake_Format:
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v2
+    - name: Install dependency packages
+      run: |
+          sudo apt install -y --no-install-recommends \
+            git
+          python -m pip install --upgrade pip
+          pip install cmake_format
+    - name: Merge fork with upstream locally
+      run: |
+          git config pull.rebase true
+          git pull -v "https://github.com/${{ env.PR_AUTHOR_FORK }}" "${{ env.SOURCE_BRANCH_NAME }}"
+    - name: Run check
+      run: |
+          find . \( -name '*.cmake' -o -name 'CMakeLists.txt' \) -not -path '*/extern/*/*' -exec cmake-format -i {} \;
+          git diff --exit-code
