--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,7 +2,7 @@
 if(BUILD_TESTING)
   add_executable(test_bluey test_bluey.cpp)
 
-  include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
+  target_include_directories(test_bluey PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
   target_link_libraries(test_bluey PRIVATE GTest::gtest_main sudoManager)
 
